--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,27 @@
-html, body, #root {
+html {
   width:100%;
-  height: calc(100vh - 60px);
+  height:100%;
+  margin: 0;
+  padding: 0;
+  background-color: #020227 !important;
+}
+body {
+  width:100%;
+  height: calc(100% - 60px);
+  margin: 0;
+  padding: 0;
+  background-color: #020227 !important;
+}
+#root {
+  width:100%;
+  height:100%;
   margin: 0;
   padding: 0;
   background-color: #020227;
 }
+
+
+
 * {
   box-sizing: border-box;
   /* font-family: 'Courier New', Courier, monospace; */
