--- a/src/index.css
+++ b/src/index.css
@@ -31,5 +31,15 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap:10px;
   justify-items: center;
-  align-items: center;
+  align-items: baseline;
+}
+@media only screen and (max-width: 1280px) {
+  .grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
