--- a/src/app.styles.css
+++ b/src/app.styles.css
@@ -1,22 +1,7 @@
 @font-face {
   font-family: "DosVGA";
   src: url("./Assetes/MorePerfectDOSVGA.ttf");
-}
-@font-face {
-  font-family: "EnvyCode";
-  src: url("./Assetes/Envy\ Code\ R.ttf");
-}
-@font-face {
-  font-family: "EnvyCodeBold";
-  src: url("./Assetes/Envy\ Code\ R\ Bold.ttf");
-}
-@font-face {
-  font-family: "UbuntuR";
-  src: url("./Assetes//Ubuntu-R.ttf");
-}
-@font-face {
-  font-family: "UbuntuMono";
-  src: url("./Assetes/UbuntuMono-R.ttf");
+  font-display: swap;
 }
 * {
   font-family: "DosVGA";
